--- a/html/dmt_attr.html
+++ b/html/dmt_attr.html
@@ -14,7 +14,7 @@
 			<ul class="searchContent" >
 				<li>
 					<label>数据类型:</label>
-					<select name="da_attr_data_type" id="da_attr_data_type">
+					<select class='xrk_combox' name="da_attr_data_type" id="da_attr_data_type">
 						<option value="0">全部</option>
 						<option value="<?cs var:config.sum_report_m ?>">累计量</option> 
 						<option value="<?cs var:config.sum_report_his ?>">历史累计量</option>
