--- a/html/dmt_attr_type.html
+++ b/html/dmt_attr_type.html
@@ -17,7 +17,7 @@
 			<li style='float:right'>
 				<ul> 
 					<li><button type="submit" class="buttonActive" id="at_btn_submit"><i class='icon-ok icon-large'></i>提交</button></li>
-					<li><button type="button" class="buttonActive" id="at_btn_erase"><i class='icon-trash icon-large'></i>重填</button></li>
+					<li><button type="button" class="buttonActive" id="at_btn_erase" onclick="return OnBtnClear()"><i class='icon-trash icon-large'></i>重填</button></li>
 					<li><button type='button' class="buttonActive" onclick="return OnBtnCancel()">取消</button></li>
 				</ul>
 			</li>
