--- a/html/dmt_machine.html
+++ b/html/dmt_machine.html
@@ -18,7 +18,7 @@
 				</li>
 				<li class="width:auto">
 					<label>告警标记:</label>
-					<select name="dm_machine_warn_flag_list" id="dm_machine_warn_flag_list">
+					<select class='xrk_combox' name="dm_machine_warn_flag_list" id="dm_machine_warn_flag_list">
 						<option value="0">全部</option>
 						<option value="<?cs var:config.dmm_mach_allow_all ?>">不屏蔽</option>
 						<option value="<?cs var:config.dmm_mach_deny_all ?>">完全屏蔽</option>
