--- a/html/dmt_showview.html
+++ b/html/dmt_showview.html
@@ -20,7 +20,7 @@
 			<li><a class="add" href="#" onclick="return dsAttrShow_<?cs var:config.view_id ?>(3);"><i class='icon-area-chart icon-large'></i>周图</a></li>
 
 			<li class="line">line</li>
-			<li>
+			<li style='line-height:34px'>
 				<input type="checkbox" id="ds_check_show_<?cs var:config.view_id ?>" onclick="return dsCheckShow_<?cs var:config.view_id ?>();"/>
 				<label class='for' for='ds_check_show_<?cs var:config.view_id ?>'>仅绘制有上报的监控点图表</label>
 			</li>
