--- a/html/dmt_dlg_detail_module.html
+++ b/html/dmt_dlg_detail_module.html
@@ -20,7 +20,7 @@ $(document).ready(function(){
 </script>
 
 <div class="pageContent">
-	<div class="pageFormContent" layoutH="56">
+	<div class="pageFormContent" layoutH="0">
 		<table> 
 			<tr height="30">
 				<td width="120" align="right">模块名称：</td>
@@ -60,7 +60,8 @@ $(document).ready(function(){
 	</div>
 
 	<div class="formBar">
-		<ul> <li><div class="button"><div class="buttonContent"><button type="button" class="close">&nbsp;&nbsp;关&nbsp;闭&nbsp;&nbsp;</button></div></div></li>
+		<ul> 
+			<li><button type="button" class="buttonActive close">关闭</button></li>
 		</ul>
 	</div>
 </div>
