--- a/html/dmt_user_center.html
+++ b/html/dmt_user_center.html
@@ -17,8 +17,7 @@
     </div>
     <div class="formBar">
         <ul>
-            <li><div class="button"><div class="buttonContent"><button type="button" class="close">&nbsp;&nbsp;关&nbsp;闭&nbsp;&nbsp;</bu
-tton></div></div></li>
+			<li><button type="button" class="buttonActive close">关闭</button></li>
         </ul>
     </div>
 </div>
@@ -45,15 +44,14 @@ tton></div></div></li>
     </div>
     <div class="formBar">
         <ul>
-            <li><div class="button"><div class="buttonContent"><button type="button" class="close">&nbsp;&nbsp;关&nbsp;闭&nbsp;&nbsp;</bu
-tton></div></div></li>
+			<li><button type="button" class="buttonActive close">关闭</button></li>
         </ul>
     </div>
 </div>
 
 <div class="navTab-panel tabsPageContent layoutBox" style="overflow:auto" id='duc_div' defH='580'>
 	<div>
-		<div class="panel" align='center' style="width:320px; float:left; margin:6px;" defH="280">
+		<div class="panel" align='center' style="width:30%; float:left; margin:6px;" defH="280">
 			<div>
 				<table width="100%" align="center" class="list" style="margin-top:2px">
 					<thead>
@@ -123,7 +121,7 @@ tton></div></div></li>
 			</div>
 		</div>
 
-		<div class="panel" align='left' style="float:left; margin:6px 15px;width:620px">
+		<div class="panel" align='left' style="width:64%; float:left; margin:6px 15px;">
 			<div>
 				<table width="100%" align="center" class="list" style="margin-top:2px">
 					<thead>
