--- a/html/dmt_attr_type.html
+++ b/html/dmt_attr_type.html
@@ -25,7 +25,7 @@
 	</div>
 
 	<div id="js_attr_type" class="unitBox"> 
-		<div class="pageFormContent nowrap">
+		<div class="pageFormContent nowrap" style='overflow:auto' layoutH='0'>
 			<input type="hidden" value="" id="action" name="action" />
 			<input type="hidden" value="" id="parent_attr_type" name="parent_attr_type" />
 			<input type="hidden" value="" id="attr_type_pos" name="attr_type_pos" />
