--- a/html/dmt_dlg_add_config.html
+++ b/html/dmt_dlg_add_config.html
@@ -162,9 +162,9 @@ $(document).ready(function(){
 </script>
 
 <style type="text/css">
-.pageFormContent label { float:left; overflow:visible; width:60px; padding:0 5px; line-height:21px;}
-.pageFormContent input[type='checkbox'] { float:left; }
-.pageFormContent label[class='for'] { width:50px; } 
+#ddac_log_type label { float:left; overflow:visible; width:60px; padding:0 5px; line-height:21px;}
+#ddac_log_type input[type='checkbox'] { float:left; }
+#ddac_log_type label[class='for'] { width:50px; } 
 </style> 
 
 <div class="pageContent">
