--- a/html/dmt_dlg_add_plugin.html
+++ b/html/dmt_dlg_add_plugin.html
@@ -1,6 +1,6 @@
 <style type="text/css">
-.pageFormContent tr { height:25px}
-.pageFormContent tr label { width:60px}
+#ddap_pageFormContent tr { height:25px}
+#ddap_pageFormContent tr label { width:60px}
 </style>
 <script language="javascript" type="text/javascript">
 
@@ -262,7 +262,7 @@ function ddapGetPluginPbInfo()
 </div>
 
 <div class="pageContent">
-	<div class="pageFormContent" layoutH="60">
+	<div class="pageFormContent" layoutH="60" id='ddap_pageFormContent'>
 		<table>
 			<tr>
 			<td>
