--- a/html/dmt_attr_manage.html
+++ b/html/dmt_attr_manage.html
@@ -1,11 +1,11 @@
 <style type="text/css">
-.pageFormContent label { float:left; overflow:visible; width:85px; padding:0 5px; line-height:21px;}
-.pageFormContent p { width:500px;} 
+#dam_pageFormContent label { float:left; overflow:visible; width:85px; padding:0 5px; line-height:21px;}
+#dam_pageFormContent p { width:500px;} 
 </style>
 
 <div class="pageContent">
 	<form method="get" action="<?cs var:config.cgipath?>mt_slog_attr" class="pageForm" id="dam_form_submit">
-		<div class="pageFormContent" layoutH="56">
+		<div class="pageFormContent" layoutH="56" id='dam_pageFormContent'>
 			<?cs if:config.action=="save_mod_attr" ?>
 			<input type="hidden" name="dam_call_back_type" value="closeCurrent" />
 			<?cs else ?>
