fix log files show bug

--- a/html/dmt_log_files.html
+++ b/html/dmt_log_files.html
@@ -29,21 +29,23 @@
 	</div>
 </div>
 
-<div class="pageContent" id='dlf_log_ct'> 
-	<table class="list" width="100%" layoutH="0"> 
-		<thead>
-			<tr>
-				<th width="10">序号</th>
-				<th width="150">日志文件</th>
-				<th width="50">文件大小</th>
-				<th width="40">日志记录数</th>
-				<th width="30">起始时间</th>
-				<th width="30">结束时间</th>
-			</tr>
-		</thead>
-		<tbody id="dlf_files_list"> 
-		</tbody>
-	</table>
+<div class="pageContent">
+	<div id='dlf_log_ct'>
+		<table class="list" width="100%" layoutH="0"> 
+			<thead>
+				<tr>
+					<th width="10">序号</th>
+					<th width="150">日志文件</th>
+					<th width="50">文件大小</th>
+					<th width="40">日志记录数</th>
+					<th width="30">起始时间</th>
+					<th width="30">结束时间</th>
+				</tr>
+			</thead>
+			<tbody id="dlf_files_list"> 
+			</tbody>
+		</table>
+	</div>
 
 	<div class="pageBar panelBar">
 		<div class="pages">
